[project]
name = "sibr-module"
version = "0.2.0"
description = "A collection of helper modules for interacting with Google Cloud Platform services, designed to simplify common workflows."
authors = [
    {name = "sigvardbratlie",email = "sigvard.bratlie@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
