[project]
name = "sibr-module"
version = "0.2.2"
description = "A collection of helper modules for interacting with Google Cloud Platform services, designed to simplify common workflows."
authors = [
    {name = "sigvardbratlie",email = "sigvard.bratlie@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bigframes (>=2.17.0,<3.0.0)",
    "db-dtypes (>=1.4.3,<2.0.0)",
    "gcsfs (>=2025.7.0,<2026.0.0)",
    "google-api-core (>=2.25.1,<3.0.0)",
    "google-auth (>=2.40.3,<3.0.0)",
    "google-auth-oauthlib (>=1.2.2,<2.0.0)",
    "google-cloud (>=0.34.0,<0.35.0)",
    "google-cloud-appengine-logging (>=1.6.2,<2.0.0)",
    "google-cloud-audit-log (>=0.3.2,<0.4.0)",
    "google-cloud-bigquery (>=3.36.0,<4.0.0)",
    "google-cloud-bigquery-connection (>=1.18.3,<2.0.0)",
    "google-cloud-bigquery-storage (>=2.32.0,<3.0.0)",
    "google-cloud-core (>=2.4.3,<3.0.0)",
    "google-cloud-functions (>=1.20.4,<2.0.0)",
    "google-cloud-iam (>=2.19.1,<3.0.0)",
    "google-cloud-logging (>=3.12.1,<4.0.0)",
    "google-cloud-resource-manager (>=1.14.2,<2.0.0)",
    "google-cloud-storage (>=3.3.0,<4.0.0)",
    "google-cloud-secret-manager (>=2.24.0,<3.0.0)",
    "google-crc32c (>=1.7.1,<2.0.0)",
    "grpcio (>=1.74.0,<2.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "pandas-gbq (>=0.29.2,<0.30.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
