[project]
name = "sibr-module"
version = "0.2.9"
description = "A collection of helper modules for interacting with Google Cloud Platform services, designed to simplify common workflows."
authors = [
    {name = "sigvardbratlie",email = "sigvard.bratlie@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
#COMMON DEPENDENCIES
dependencies = [
    "google-api-core>=2.25,<3.0",
    "google-auth>=2.40,<3.0",
    "pandas>=2.3,<3.0",
    "python-dotenv>=1.0,<2.0"
]

[project.optional-dependencies]
bigquery = [
    "google-cloud-bigquery>=3.36,<4.0",
    "pandas-gbq>=0.29,<0.30",
    "db-dtypes>=1.4,<2.0",
    "pyarrow>=21.0,<22.0",
    "bigframes>=2.17,<3.0",
    "joblib>=1.3.0,<1.5.0",
    "pyyaml>=6.0,<7.0",


]
storage = [
    "google-cloud-storage>=3.3,<4.0",
    "gcsfs>=2025.7,<2026.0"
]
secrets = [
    "google-cloud-secret-manager>=2.24,<3.0",
]
logging = [
    "google-cloud-logging>=3.12,<4.0"
]
all = [
    "sibr-module[bigquery]",
    "sibr-module[storage]",
    "sibr-module[secrets]",
    "sibr-module[logging]"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
